fix: text-align: left, for container with different align

--- a/src/DynaStarRating.less
+++ b/src/DynaStarRating.less
@@ -4,6 +4,7 @@
 .dyna-star-rating {
   position: relative;
   user-select: none;
+  text-align: left;
 
   &__stars {
     .dyna-svg {
